src/freeRTOS/wrapper.rs

unsafe extern "C" {
    pub fn xQueueGiveFromISR(
        xQueue: QueueHandle_t,
        pxHigherPriorityTaskWoken: *mut BaseType_t,
    ) -> BaseType_t;
}
unsafe extern "C" {
    #[doc = " queue. h\n @code{c}\n BaseType_t xQueueReceiveFromISR(\n                                     QueueHandle_t    xQueue,\n                                     void             *pvBuffer,\n                                     BaseType_t       *pxTaskWoken\n                                 );\n @endcode\n\n Receive an item from a queue.  It is safe to use this function from within an\n interrupt service routine.\n\n @param xQueue The handle to the queue from which the item is to be\n received.\n\n @param pvBuffer Pointer to the buffer into which the received item will\n be copied.\n\n @param pxHigherPriorityTaskWoken A task may be blocked waiting for space to\n become available on the queue.  If xQueueReceiveFromISR causes such a task\n to unblock *pxTaskWoken will get set to pdTRUE, otherwise *pxTaskWoken will\n remain unchanged.\n\n @return pdPASS if an item was successfully received from the queue,\n otherwise pdFAIL.\n\n Example usage:\n @code{c}\n\n QueueHandle_t xQueue;\n\n // Function to create a queue and post some values.\n void vAFunction( void *pvParameters )\n {\n char cValueToPost;\n const TickType_t xTicksToWait = ( TickType_t )0xff;\n\n  // Create a queue capable of containing 10 characters.\n  xQueue = xQueueCreate( 10, sizeof( char ) );\n  if( xQueue == 0 )\n  {\n      // Failed to create the queue.\n  }\n\n  // ...\n\n  // Post some characters that will be used within an ISR.  If the queue\n  // is full then this task will block for xTicksToWait ticks.\n  cValueToPost = 'a';\n  xQueueSend( xQueue, ( void * ) &cValueToPost, xTicksToWait );\n  cValueToPost = 'b';\n  xQueueSend( xQueue, ( void * ) &cValueToPost, xTicksToWait );\n\n  // ... keep posting characters ... this task may block when the queue\n  // becomes full.\n\n  cValueToPost = 'c';\n  xQueueSend( xQueue, ( void * ) &cValueToPost, xTicksToWait );\n }\n\n // ISR that outputs all the characters received on the queue.\n void vISR_Routine( void )\n {\n BaseType_t xTaskWokenByReceive = pdFALSE;\n char cRxedChar;\n\n  while( xQueueReceiveFromISR( xQueue, ( void * ) &cRxedChar, &xTaskWokenByReceive) )\n  {\n      // A character was received.  Output the character now.\n      vOutputCharacter( cRxedChar );\n\n      // If removing the character from the queue woke the task that was\n      // posting onto the queue xTaskWokenByReceive will have been set to\n      // pdTRUE.  No matter how many times this loop iterates only one\n      // task will be woken.\n  }\n\n  if( xTaskWokenByReceive != ( char ) pdFALSE;\n  {\n      taskYIELD ();\n  }\n }\n @endcode\n \\defgroup xQueueReceiveFromISR xQueueReceiveFromISR\n \\ingroup QueueManagement"]
    pub fn xQueueReceiveFromISR(
        xQueue: QueueHandle_t,
        pvBuffer: *mut ::std::os::raw::c_void,
        pxHigherPriorityTaskWoken: *mut BaseType_t,
    ) -> BaseType_t;
}
unsafe extern "C" {
    pub fn xQueueIsQueueEmptyFromISR(xQueue: QueueHandle_t) -> BaseType_t;
}
unsafe extern "C" {
    pub fn xQueueIsQueueFullFromISR(xQueue: QueueHandle_t) -> BaseType_t;
}
unsafe extern "C" {
    pub fn uxQueueMessagesWaitingFromISR(xQueue: QueueHandle_t) -> UBaseType_t;
}
unsafe extern "C" {
    pub fn xQueueCreateMutex(ucQueueType: u8) -> QueueHandle_t;
}
unsafe extern "C" {
    pub fn xQueueCreateMutexStatic(
        ucQueueType: u8,
        pxStaticQueue: *mut StaticQueue_t,
    ) -> QueueHandle_t;
}
unsafe extern "C" {
    pub fn xQueueCreateCountingSemaphore(
        uxMaxCount: UBaseType_t,
        uxInitialCount: UBaseType_t,
    ) -> QueueHandle_t;
}
unsafe extern "C" {
    pub fn xQueueCreateCountingSemaphoreStatic(
        uxMaxCount: UBaseType_t,
        uxInitialCount: UBaseType_t,
        pxStaticQueue: *mut StaticQueue_t,
    ) -> QueueHandle_t;
}
unsafe extern "C" {
    pub fn xQueueSemaphoreTake(xQueue: QueueHandle_t, xTicksToWait: TickType_t) -> BaseType_t;
}
unsafe extern "C" {
    pub fn xQueueTakeMutexRecursive(xMutex: QueueHandle_t, xTicksToWait: TickType_t) -> BaseType_t;
}
unsafe extern "C" {
    pub fn xQueueGiveMutexRecursive(xMutex: QueueHandle_t) -> BaseType_t;
}
unsafe extern "C" {
    pub fn xQueueGenericCreate(
        uxQueueLength: UBaseType_t,
        uxItemSize: UBaseType_t,
        ucQueueType: u8,
    ) -> QueueHandle_t;
}
unsafe extern "C" {
    pub fn xQueueGenericCreateStatic(
        uxQueueLength: UBaseType_t,
        uxItemSize: UBaseType_t,
        pucQueueStorage: *mut u8,
        pxStaticQueue: *mut StaticQueue_t,
        ucQueueType: u8,
    ) -> QueueHandle_t;
}
unsafe extern "C" {
    pub fn xQueueGenericGetStaticBuffers(
        xQueue: QueueHandle_t,
        ppucQueueStorage: *mut *mut u8,
        ppxStaticQueue: *mut *mut StaticQueue_t,
    ) -> BaseType_t;
}
unsafe extern "C" {
    pub fn vQueueWaitForMessageRestricted(
        xQueue: QueueHandle_t,
        xTicksToWait: TickType_t,
        xWaitIndefinitely: BaseType_t,
    );
}
unsafe extern "C" {
    pub fn xQueueGenericReset(xQueue: QueueHandle_t, xNewQueue: BaseType_t) -> BaseType_t;
}
unsafe extern "C" {
    pub fn uxQueueGetQueueItemSize(xQueue: QueueHandle_t) -> UBaseType_t;
}
unsafe extern "C" {
    pub fn uxQueueGetQueueLength(xQueue: QueueHandle_t) -> UBaseType_t;
}
pub type SemaphoreHandle_t = QueueHandle_t;
#[doc = " Type by which software timers are referenced.  For example, a call to\n xTimerCreate() returns an TimerHandle_t variable that can then be used to\n reference the subject timer in calls to other software timer API functions\n (for example, xTimerStart(), xTimerReset(), etc.)."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tmrTimerControl {
    _unused: [u8; 0],
}
pub type TimerHandle_t = *mut tmrTimerControl;
pub type TimerCallbackFunction_t =
    ::std::option::Option<unsafe extern "C" fn(xTimer: TimerHandle_t)>;
pub type PendedFunction_t =
    ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void, arg2: u32)>;
unsafe extern "C" {
    pub fn xTimerCreate(
        pcTimerName: *const ::std::os::raw::c_char,
        xTimerPeriodInTicks: TickType_t,
        xAutoReload: BaseType_t,
        pvTimerID: *mut ::std::os::raw::c_void,
        pxCallbackFunction: TimerCallbackFunction_t,
    ) -> TimerHandle_t;
}
unsafe extern "C" {
    pub fn xTimerCreateStatic(
        pcTimerName: *const ::std::os::raw::c_char,
        xTimerPeriodInTicks: TickType_t,
        xAutoReload: BaseType_t,
        pvTimerID: *mut ::std::os::raw::c_void,
        pxCallbackFunction: TimerCallbackFunction_t,
        pxTimerBuffer: *mut StaticTimer_t,
    ) -> TimerHandle_t;
}
unsafe extern "C" {
    #[doc = " void *pvTimerGetTimerID( TimerHandle_t xTimer );\n\n Returns the ID assigned to the timer.\n\n IDs are assigned to timers using the pvTimerID parameter of the call to\n xTimerCreated() that was used to create the timer, and by calling the\n vTimerSetTimerID() API function.\n\n If the same callback function is assigned to multiple timers then the timer\n ID can be used as time specific (timer local) storage.\n\n @param xTimer The timer being queried.\n\n @return The ID assigned to the timer being queried.\n\n Example usage:\n\n See the xTimerCreate() API function example usage scenario."]
    pub fn pvTimerGetTimerID(xTimer: TimerHandle_t) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    #[doc = " void vTimerSetTimerID( TimerHandle_t xTimer, void *pvNewID );\n\n Sets the ID assigned to the timer.\n\n IDs are assigned to timers using the pvTimerID parameter of the call to\n xTimerCreated() that was used to create the timer.\n\n If the same callback function is assigned to multiple timers then the timer\n ID can be used as time specific (timer local) storage.\n\n @param xTimer The timer being updated.\n\n @param pvNewID The ID to assign to the timer.\n\n Example usage:\n\n See the xTimerCreate() API function example usage scenario."]
    pub fn vTimerSetTimerID(xTimer: TimerHandle_t, pvNewID: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    #[doc = " BaseType_t xTimerIsTimerActive( TimerHandle_t xTimer );\n\n Queries a timer to see if it is active or dormant.\n\n A timer will be dormant if:\n     1) It has been created but not started, or\n     2) It is an expired one-shot timer that has not been restarted.\n\n Timers are created in the dormant state.  The xTimerStart(), xTimerReset(),\n xTimerStartFromISR(), xTimerResetFromISR(), xTimerChangePeriod() and\n xTimerChangePeriodFromISR() API functions can all be used to transition a timer into the\n active state.\n\n @param xTimer The timer being queried.\n\n @return pdFALSE will be returned if the timer is dormant.  A value other than\n pdFALSE will be returned if the timer is active.\n\n Example usage:\n @verbatim\n // This function assumes xTimer has already been created.\n void vAFunction( TimerHandle_t xTimer )\n {\n     if( xTimerIsTimerActive( xTimer ) != pdFALSE ) // or more simply and equivalently \"if( xTimerIsTimerActive( xTimer ) )\"\n     {\n         // xTimer is active, do something.\n     }\n     else\n     {\n         // xTimer is not active, do something else.\n     }\n }\n @endverbatim"]
    pub fn xTimerIsTimerActive(xTimer: TimerHandle_t) -> BaseType_t;
}
unsafe extern "C" {
    #[doc = " TaskHandle_t xTimerGetTimerDaemonTaskHandle( void );\n\n Simply returns the handle of the timer service/daemon task.  It it not valid\n to call xTimerGetTimerDaemonTaskHandle() before the scheduler has been started."]
    pub fn xTimerGetTimerDaemonTaskHandle() -> TaskHandle_t;
}
unsafe extern "C" {
    #[doc = " const char * const pcTimerGetName( TimerHandle_t xTimer );\n\n Returns the name that was assigned to a timer when the timer was created.\n\n @param xTimer The handle of the timer being queried.\n\n @return The name assigned to the timer specified by the xTimer parameter."]
    pub fn pcTimerGetName(xTimer: TimerHandle_t) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    #[doc = " void vTimerSetReloadMode( TimerHandle_t xTimer, const BaseType_t xAutoReload );\n\n Updates a timer to be either an auto-reload timer, in which case the timer\n automatically resets itself each time it expires, or a one-shot timer, in\n which case the timer will only expire once unless it is manually restarted.\n\n @param xTimer The handle of the timer being updated.\n\n @param xAutoReload If xAutoReload is set to pdTRUE then the timer will\n expire repeatedly with a frequency set by the timer's period (see the\n xTimerPeriodInTicks parameter of the xTimerCreate() API function).  If\n xAutoReload is set to pdFALSE then the timer will be a one-shot timer and\n enter the dormant state after it expires."]
    pub fn vTimerSetReloadMode(xTimer: TimerHandle_t, xAutoReload: BaseType_t);
}
unsafe extern "C" {
    #[doc = " BaseType_t xTimerGetReloadMode( TimerHandle_t xTimer );\n\n Queries a timer to determine if it is an auto-reload timer, in which case the timer\n automatically resets itself each time it expires, or a one-shot timer, in\n which case the timer will only expire once unless it is manually restarted.\n\n @param xTimer The handle of the timer being queried.\n\n @return If the timer is an auto-reload timer then pdTRUE is returned, otherwise\n pdFALSE is returned."]
    pub fn xTimerGetReloadMode(xTimer: TimerHandle_t) -> BaseType_t;
}
